objects/Pending_Correction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Implementation_Case__r.AccountLegalName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionDisplay__c</fullName>
        <formula>IF(OR(ISPICKVAL(Stage__c,&quot;Pending Response From Implementations&quot;),AND(ISPICKVAL(Stage__c,&quot;Declined&quot;),(Anthem_Entity_Transform__c == &apos;Local&apos;))),&apos;Local&apos;,IF(OR(ISPICKVAL(Stage__c,&quot;Not Started&quot;),ISPICKVAL(Stage__c,&quot;Ready for SMEs&quot;)),&apos;SME&apos;,&apos;Others&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActionDisplay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity_Transform__c</fullName>
        <formula>Implementation_Case__r.Account.AnthemEntityTransform__c</formula>
        <label>Anthem Entity Transform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Implementer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer_Id__c</fullName>
        <description>Assigned Implementer is being stamped from Implemented Case object.</description>
        <formula>Implementation_Case__r.Assigned_Implementer__c</formula>
        <label>Assigned Implementer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Case__r.Assigned_Implementer_Name__c</formula>
        <label>Assigned Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts</label>
        <referenceTo>Contracts__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correction_Department__c</fullName>
        <description>Added Life and Disability for 23116</description>
        <label>Correction Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Case Install</fullName>
                </value>
                <value>
                    <fullName>Issue Control</fullName>
                    <label>Case Installation</label>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Dental Complete</fullName>
                    <label>Dental Completes</label>
                </value>
                <value>
                    <fullName>First Impressions</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>InterPlan</fullName>
                </value>
                <value>
                    <fullName>Life &amp; Disability</fullName>
                </value>
                <value>
                    <fullName>Medical Benefits</fullName>
                </value>
                <value>
                    <fullName>Enrollment and Billing</fullName>
                    <label>Membership</label>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>SBC</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_Reasons_PCA__c</fullName>
        <label>Count Reasons PCA</label>
        <summaryFilterItems>
            <field>Pending_Correction_Reason__c.Pending_Correction_Stage__c</field>
            <operation>equals</operation>
            <value>Pending Correction Action</value>
        </summaryFilterItems>
        <summaryForeignKey>Pending_Correction_Reason__c.Pending_Correction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dental_Complete__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dental Complete</label>
        <referenceTo>Dental_Complete__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_and_Billing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment and Billing</label>
        <referenceTo>Enrollment_and_Billing__c</referenceTo>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FI_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Impression</label>
        <referenceTo>First_Impressions__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Cards__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Cards</label>
        <referenceTo>ID_Cards__c</referenceTo>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Case__r.Implementation_Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Status__c</fullName>
        <formula>TEXT(Implementation_Case__r.Implementation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementer_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementer Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InterPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InterPlan</label>
        <referenceTo>InterPlan__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Control</label>
        <referenceTo>Issue_Control__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Life_and_Disability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Life and Disability</label>
        <referenceTo>Life_and_Disability__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LnT_Identifer__c</fullName>
        <description>This field is being used as an identifier for LnT records where Local Sales user can act as an Implementer.</description>
        <formula>IF(AND(Implementation_Case__r.Anthem_Entity__c == &apos;Labor and Trust&apos;,				 
				ISPICKVAL(Implementation_Case__r.Implementation_Status__c, &apos;Ready for Imps&apos;),
				OR($Profile.Name ==&apos;Local Sales&apos;,$Profile.Name ==&apos;Local Sales Dual&apos; )),&apos;LnT&apos;,&apos;Non-LnT&apos;)</formula>
        <label>LnT Identifer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginUser_Is_AssignedImplementer__c</fullName>
        <description>This field checks if the logged in user is the Assigned Implementer.</description>
        <formula>If($User.Id == Assigned_Implementer_Id__c,true,false)</formula>
        <label>LoginUser_Is_AssignedImplementer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoginUser_Is_CreatedBy__c</fullName>
        <formula>IF( $User.Id  ==   CreatedById , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoginUser_Is_CreatedBy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Benefits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Benefits</label>
        <referenceTo>Medical_Benefit__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Stage__c</fullName>
        <label>Pending Correction Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Correction Action</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Cannot Correct At This Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <formula>IF(
ISBLANK(Ready_for_SMEs_Date_Completed__c),Now() - Pending_Response_From_SMEs_Date_Complete__c,
	(Ready_for_SMEs_Date_Completed__c - Pending_Response_From_SMEs_Date_Complete__c)
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Type__c</fullName>
        <label>Pending Correction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>After Hours Submission</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Alpha Prefix</fullName>
                </value>
                <value>
                    <fullName>ASO Funding Doc</fullName>
                </value>
                <value>
                    <fullName>ASO or ABF Finance Forms</fullName>
                </value>
                <value>
                    <fullName>ASO or ABF Stoploss Form</fullName>
                </value>
                <value>
                    <fullName>Attached to Main Bill Entity</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Auto Suffix Worksht</fullName>
                </value>
                <value>
                    <fullName>BC PPO Comments</fullName>
                </value>
                <value>
                    <fullName>Benefit Code</fullName>
                </value>
                <value>
                    <fullName>Benefit Completion Missing Suffixes /Clarification</fullName>
                </value>
                <value>
                    <fullName>Benefit Summaries</fullName>
                </value>
                <value>
                    <fullName>BenefitWallet / Health Equity Form</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Bill Re-Structure /Paid to Date</fullName>
                </value>
                <value>
                    <fullName>Binder Check</fullName>
                </value>
                <value>
                    <fullName>Broker of Record</fullName>
                </value>
                <value>
                    <fullName>Broker Phone</fullName>
                </value>
                <value>
                    <fullName>Broker Sub-Agent Agreement</fullName>
                </value>
                <value>
                    <fullName>Business Associate Agreement</fullName>
                </value>
                <value>
                    <fullName>Calcobra</fullName>
                </value>
                <value>
                    <fullName>Cancellation - Bill to Date/Eligibility</fullName>
                </value>
                <value>
                    <fullName>Case Exception Request Form</fullName>
                </value>
                <value>
                    <fullName>Case Name</fullName>
                </value>
                <value>
                    <fullName>Case No Longer At Ri</fullName>
                </value>
                <value>
                    <fullName>Case Number</fullName>
                </value>
                <value>
                    <fullName>C - Benefit discrepancies - Sales is verifying</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Corrections__c</fullName>
        <formula>HYPERLINK( Id , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Corrections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Response_From_SMEs_Date_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Response From Imp Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <formula>IF( 
OR( 
$User.ProfileName__c=&apos;Local Sales&apos;,$User.ProfileName__c=&apos;Local Sales Dual&apos;, 
$User.ProfileName__c=&apos;Local Implementations&apos;,$User.ProfileName__c=&apos;Local Implementations Dual&apos;, 
AND(Or($User.ProfileName__c=&apos;Specialty Post Sales&apos;, $User.ProfileName__c= &apos;Specialty Post Sales Dual&apos;),(AND(NOT(ISPICKVAL(Stage__c,&quot;Ready for SMEs&quot;)),NOT(ISPICKVAL(Stage__c,&quot;Not Started&quot;))))) 
) 

,&apos;Local&apos;, IF( 
OR( 
(OR($User.ProfileName__c=&apos;SME&apos;, 
$User.ProfileName__c=&apos;SME Dual&apos;,$User.ProfileName__c=&apos;Underwriting&apos;,$User.ProfileName__c=&apos;Underwriting Dual&apos; )), 
(AND(Or($User.ProfileName__c=&apos;Specialty Post Sales&apos;, $User.ProfileName__c= &apos;Specialty Post Sales Dual&apos;),OR(ISPICKVAL(Stage__c,&quot;Ready for SMEs&quot;),ISPICKVAL(Stage__c,&quot;Not Started&quot;)))) 
) 
,&apos;SME&apos;,&apos;Others&apos;) 
)</formula>
        <label>ProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>BCPPO</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>First Impressions</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Workers Comp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_SMEs_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ready for SMEs Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit booklets on draft</fullName>
                </value>
                <value>
                    <fullName>Benefit discrepancies - Sales is verifying</fullName>
                </value>
                <value>
                    <fullName>Clarification of voucher</fullName>
                </value>
                <value>
                    <fullName>E&amp;B Internal Only</fullName>
                </value>
                <value>
                    <fullName>Funding documents on draft</fullName>
                </value>
                <value>
                    <fullName>Internal Case Install Only</fullName>
                </value>
                <value>
                    <fullName>Issue Control Internal Only</fullName>
                </value>
                <value>
                    <fullName>Need additional paperwork - incomplete paperwork</fullName>
                </value>
                <value>
                    <fullName>Pending for updated text from Compliance</fullName>
                </value>
                <value>
                    <fullName>Rate verification</fullName>
                </value>
                <value>
                    <fullName>Spanish translation requested</fullName>
                </value>
                <value>
                    <fullName>To QA (quality audit)</fullName>
                </value>
                <value>
                    <fullName>Waiting for Compliance approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for revised SOBs (summary of benefits)</fullName>
                </value>
                <value>
                    <fullName>Contracts Internal Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rx__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rx</label>
        <referenceTo>Rx__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rx_owner_record_name__c</fullName>
        <formula>Rx__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rx owner record name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SBC</label>
        <referenceTo>SBC__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Pending Response From Implementations</fullName>
                </value>
                <value>
                    <fullName>Ready for SMEs</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmitDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SubmitDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underwriting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriting</label>
        <referenceTo>Underwriting__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340))&amp; Id</formula>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision</label>
        <referenceTo>Vision__c</referenceTo>
        <relationshipLabel>Pending Corrections</relationshipLabel>
        <relationshipName>Pending_Corrections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pending Correction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Correction_Department__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>SubmitDate__c</columns>
        <columns>Implementation_Case__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Case_Install_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Case Install</value>
        </filters>
        <label>Case Install Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>Case_Installation_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Issue Control</value>
        </filters>
        <label>Case Installation Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Contracts</value>
        </filters>
        <label>Contracts Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>Dental_Completes_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Dental Complete</value>
        </filters>
        <label>Dental Completes Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>First_Impressions_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>First Impressions</value>
        </filters>
        <label>First Impressions Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>ID_Cards_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>ID Cards</value>
        </filters>
        <label>ID Cards Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>InterPlan_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>InterPlan</value>
        </filters>
        <label>InterPlan Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>Life_Disability_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Life &amp; Disability</value>
        </filters>
        <label>Life &amp; Disability Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>Medical_Benefits_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Medical Benefits</value>
        </filters>
        <label>Medical Benefits Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>Membership_Pending_Correction</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,Pending Response From Implementations,Ready for SMEs</value>
        </filters>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Enrollment and Billing</value>
        </filters>
        <label>Membership Pending Correction</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Pending_CorrectionMembership</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Enrollment and Billing</value>
        </filters>
        <filters>
            <field>LoginUser_Is_CreatedBy__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Assigned Pending CorrectionMembership</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Pending_Correction_CI</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Correction_Department__c</field>
            <operation>equals</operation>
            <value>Issue Control</value>
        </filters>
        <filters>
            <field>LoginUser_Is_CreatedBy__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Assigned Pending Correction CI</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Pending_Corrections</fullName>
        <columns>NAME</columns>
        <columns>Pending_Correction_Type__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Correction_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LoginUser_Is_AssignedImplementer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Assigned Pending Corrections</label>
    </listViews>
</CustomObject>